Fixes outfit list misalignment bug.

--- a/src/Components/RelateCompareOutfitLists/relateOutfitLists.scss
+++ b/src/Components/RelateCompareOutfitLists/relateOutfitLists.scss
@@ -58,7 +58,7 @@
 
 #add-outfit-card {
   position: relative;
-  top: -226px;
+  top: -165px;
 }
 
 #add-outfit-button {
